--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "md5": "^2.3.0",
     "mongodb": "^4.3.1",
     "multer": "^1.4.4",
+    "nodemailer": "^6.8.0",
     "nodemon": "^2.0.15"
   }
 }
